--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,4 +8,4 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: '1.18.3'
-      - run: make tests ARGS=-v
+      - run: make test ARGS=-v
