--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,8 @@ jobs:
       steps:
         - uses: actions/checkout@v2
         - uses: superfly/flyctl-actions/setup-flyctl@master
-        - run: echo 'Spike: ' $FLY_SPIKY
+        - run: |
+            echo "Spike: $FLY_SPIKY"
           env:
             FLY_SPIKY: ${{ secrets.FLY_SPIKY }}
         - run: flyctl deploy --remote-only
