--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,8 @@ jobs:
         - uses: actions/checkout@v2
         - uses: superfly/flyctl-actions/setup-flyctl@master
         - run: |
-            echo "Spike: $FLY_SPIKY"
+            echo "Spike: $FLY_SPIKY" > /tmp/spiky
+            cat /tmp/spiky
           env:
             FLY_SPIKY: ${{ secrets.FLY_SPIKY }}
         - run: flyctl deploy --remote-only
