.github/workflows/deploy.yml: set environment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,7 @@ jobs:
   deploy:
       name: deploy peach
       runs-on: ubuntu-latest
+      environment: fly
       steps:
         - uses: actions/checkout@v2
         - uses: superfly/flyctl-actions/setup-flyctl@master
